# uv

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXTRA_FEATURES.md  README.md  install.ps1  install.sh
.github/workflows/: fork-release.yml
crates/uv/: build.rs
crates/uv-cli/: build.rs
crates/uv-cli/src/: lib.rs  version.rs
crates/uv-configuration/: Cargo.toml
crates/uv-configuration/src/: lib.rs
crates/uv-python/: Cargo.toml
crates/uv-python-index/: Cargo.toml
crates/uv-python-index/src/: lib.rs
crates/uv-python/src/: discovery.rs  downloads.rs  installation.rs  lib.rs
crates/uv-settings/src/: lib.rs  settings.rs
crates/uv-static/src/: env_vars.rs
crates/uv/src/: lib.rs  settings.rs
crates/uv/src/commands/: build_frontend.rs  self_update.rs  venv.rs
crates/uv/src/commands/pip/: compile.rs  install.rs  sync.rs
crates/uv/src/commands/project/: check.rs  init.rs  mod.rs  run.rs
crates/uv/src/commands/python/: find.rs  install.rs  list.rs  pin.rs
crates/uv/src/commands/tool/: common.rs  install.rs  run.rs  upgrade.rs
crates/uv/tests/it/: help.rs  pip_install.rs  python_find.rs  python_list.rs  show_settings.rs
crates/uv/tests/pip_install/: pip_install.rs
crates/uv/tests/python/: python_find.rs  python_list.rs
docs/concepts/: python-versions.md
scripts/: publish-release.sh
scripts/python_indexes/: README.md  _build.py  _index.py  _pack.py  _publish.py  _schema.py  config.toml  release.py
